src/components/form/search/_search.scss
.uids-search label {
  @include element-invisible;
}

.uids-search input[type="text"] {
  padding-left: $md;
  border-bottom: 1px solid #f1f1f1;
  font-size: 1.5rem;
  text-align: center;

  @include breakpoint(menu) {
    text-align: left;
  }

  &::placeholder {
    color: $secondary;
  }
}

.uids-search [type="submit"] {
  width: 100%;
  margin-top: unset;
  background: #ccc;
  line-height: 1;
  text-transform: uppercase;
  font-family: $font-family-caps-bold;

  @include breakpoint(menu) {
    width: auto;
  }
}

/////
.search-overlay .uids-search [type="submit"]  {
  width: auto;
}


.uids-search [type="search"] {
  margin: 0;
}

.uids-search .form-item,
.uids-search .form-actions {
  margin: 0;
}

.uids-search>* {
  margin: calc(0px / 2);
}

.uids-search>* {
  flex-grow: 1;
}

.uids-search>input[type=text] {
  flex-basis: 0;
  flex-grow: 999;
  min-width: calc(66.666% - 0px);
}

.uids-search [type="text"] {
  width: 100%;
  font-size: inherit;
  margin: 0;
}

.uids-search {
  display: block;
  margin-bottom: 40px;

  @include breakpoint(sm) {
    display: flex;
    flex-wrap: wrap;
  }

  @include breakpoint(menu) {
    padding: 20px;
    background: #f1f1f1;
  }
}
//////
.search-overlay .uids-search {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
}


.uids-search>* {
  display: flex;
  flex-wrap: wrap;
}

.uids-search>*>:first-child {
  @include breakpoint(menu) {
    flex-basis: 0;
    flex-grow: 999;
    min-width: calc(66.666% - 0px);
  }
}

.uids-search>*>:last-child {
  display: flex;
}

